# devops

./: readme.txt
.github/workflows/: codeql.yml  defender-for-devops.yml  msvc.yml  pysa.yml
amcharts/reports/: r.html
amcharts/scripts/: amcharts.js  funnel.js  gantt.js  gauge.js  pie.js  radar.js  serial.js  xy.js
amcharts/templates/: .pyramidChart3D.html.tem.swp  SaveAs.html.tem  ThemeTest.html.tem  column3D.html.tem  column3DStacked.html.tem  column3DY3.html.tem  columnCylinders.html.tem  columnRotatedSeries.html.tem  funnelChart.html.tem  lineWith4ValueAxes.html.tem  lineWithFilledValueRanges.html.tem  lineWithLogarithmicValueAxis.html.tem  lineWithMultipleValueAxes.html.tem  ohlc.html.tem  pie3D.html.tem  pieDonut3D.html.tem  pyramidChart3D.html.tem  waterFallChart.html.tem
cfg/: common.env  liquibase.env
terraform/aws/efs/: efs.tf  vpc.tf
terraform/aws/eks/: eks-cluster.tf
terraform/aws/jenkins-on-eks/: efs.tf  sg.tf  vpc.tf
terraform/docker/activiti/: activiti.tf
terraform/docker/nginx/: nginx.tf
vagrant/pgrep/: replication.txt
vagrant/postgres17/: auto_explain.ext  bootstrap.sh  compile.txt  pgtap.ext  pgtap.run  pgtap_install.txt  pgtap_obj.sql  pgtap_run.sql  pl_tle.ext  plperl.ext  plpgsql_exception_procedure.sql  pt_multi4.sh
vagrant/postgres17/examples/: pt_hash.sql  pt_level32.sh  pt_level4.sh  pt_list.sql  pt_multi_columns.sql  pt_range.sql
vagrant/postgres17/extensions/: pg_partman.ext  pg_stat_statements.ext  pgrao_sqlstat.ext  pgtap.ext  pljava.ext  plpython.ext  plsh.ext
vagrant/postgres17/extensions/pgtap/: pgtap_obj.sql  pgtap_test2.sql  pgtap_test3.sql  pgtap_test4.sql  plpgsql_exception_function.sql
vagrant/postgres17/hook/: Makefile  hook--1.0.sql  hook.c  hook.conf  hook.control  meson.build
vagrant/postgres17/myhtml/: README.md  call.sql  call1.sql  call2.sql  h2.sql  ins0.sql  ins1.sql  ins2.sql  myhtml.sql  tab.sql  x.lst
vagrant/postgres17/myjson/: j1
vagrant/postgres17/pglite/: Makefile  command.c  mainloop.c  meson.build  settings.h  startup.c
vagrant/postgres17/pgrao/: META.json  Makefile  pgrao--1.0.0.sql  pgrao.control  sand.sql
vagrant/postgres17/pgtap/: pgtap_test0.sql  pgtap_test1.sql  pgtap_test2.sql  pgtap_test3.sql  pgtap_test4.sql  pgtap_test5.sql  pgtap_test6.sql
vagrant/postgres17/raohook/: Makefile  gen  hook.lst  meson.build  raohook--1.0.sql  raohook.c  raohook.conf  raohook.control
vagrant/postgres17/sql/: dbstat.sql  loadprofile.sql  lock_tree.sql  sqltree.sql  tabnostat.sql  tabsize.sql
